dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: balo-cricket
  labels:
    name: balo-cricket
